--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,83 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100vh;
+  box-sizing: border-box;
+}
+.menu{
+  position: relative;
+}
+.main-block{
+  padding: 50px 70px;
+  box-shadow: 20px 20px 120px #0000001f;
+  border-radius: 10px;
+  position: absolute;
+  top: 160px;
+  left: 480px;
+}
+h1{
+  font-size: 2em;
+  text-align: center;
+  letter-spacing: 5px;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+}
+.inputbox{
+  position: relative;
+  width: 300px;
+  height: 50px;
+  margin-bottom: 50px;
+}
+.input{
+  width: 100%;
+  border: 2px solid #4262FF;
+  outline: none;
+  background: none;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 1.2em;
+}
+.inputbox:last-child{
+  margin-bottom: 0;
+}
+.inputbox span{
+  position: absolute;
+  top: 14px;
+  left: 20px;
+  font-size: 1em;
+  transition: 0.6s;
+  font-family: Cuprum;
+}
+.input:focus ~ span,
+.input:valid ~ span{
+  transform: translateX(-13px) translateY(-35px);
+  font-size: 1em;
+}
+.submit {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: 0.2s;
+  background-color: #4262FF;
+  color: #fff;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+  padding-top: 25px;
+}
+.submit:hover {
+  background-color: rgb(207, 207, 207);
+}
+span{
+  border-left: 1px solid #fff;
+  padding-left: 2px;
+  font-family: 'Poppins', sans-serif;
 }
 
 code {
